# bs-state

./: .gitignore  .mise.toml  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  renovate.json
.github/workflows/: workflow.yml
src/bs_state/: __init__.py  storage.py
src/bs_state/implementation/: __init__.py  config_map_storage.py  file_storage.py  memory.py  memory_storage.py  redis_storage.py  valkey_storage.py
src/tests/: conftest.py
src/tests/implementation/: conftest.py  test_config_map_storage.py  test_file_storage.py  test_loader.py  test_memory.py  test_memory_state.py
tests/implementation/: test_file_storage.py  test_memory_storage.py  test_redis_storage.py  test_valkey_storage.py
