[project]
requires-python = ">=3.13, <3.14"
name = "bs-state"
description = "State"
version = "2.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pydantic ==2.11.*",
]

[project.urls]
repository = "https://github.com/BlindfoldedSurgery/bs-state"

[project.optional-dependencies]
file = [
    "aiofile >=3, <4",
]
kubernetes = [
    "kubernetes_asyncio >=32, <33",
]
redis = [
    "redis[hiredis] >6, <7"
]

[dependency-groups]
dev = [
    "bs-config [dotenv] ==1.1.1",
    "commitizen ==4.8.2",
    "coverage [toml] >=7, <8",
    "mypy ==1.16.*",
    "pre-commit >=4, <5",
    "pytest >=8, <9",
    "pytest-asyncio ==1.0.*",
    "pytest-cov >=6, <7",
    "ruff ==0.11.13",
    "uvloop ==0.21.*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/bs_state",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "aiofile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "kubernetes",
    "redis",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["bs_state"]
