[project]
requires-python = ">=3.13, <3.14"
name = "bs-state"
description = "State"
version = "2.3.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
license = "MIT"
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "opentelemetry-api >=1.22, <2",
    "pydantic ==2.11.*",
]

[project.urls]
repository = "https://github.com/BlindfoldedSurgery/bs-state"

[project.optional-dependencies]
file = [
    "aiofile >=3, <4",
]
kubernetes = [
    "kubernetes_asyncio >=33, <34",
]
redis = [
    "opentelemetry-instrumentation-redis",
    "redis[hiredis] >6, <7",
]
valkey = [
    # Seems like that's correct for now
    # https://valkey-py.readthedocs.io/en/stable/opentelemetry.html#opentelemetry-instrumentation
    "opentelemetry-instrumentation-redis",
    "valkey[libvalkey] >6, <7",
]

[dependency-groups]
dev = [
    "bs-config [dotenv] ==1.1.1",
    "commitizen ==4.9.1",
    "coverage [toml] >=7, <8",
    "mypy ==1.18.*",
    "pre-commit >=4, <5",
    "pytest >=8, <9",
    "pytest-asyncio ==1.2.*",
    "pytest-cov >=7, <8",
    "ruff ==0.13.0",
    "uvloop ==0.21.*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/bs_state",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "aiofile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "kubernetes",
    "redis",
    "valkey",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["bs_state"]
