[project]
requires-python = ">=3.13, <3.15"
name = "bs-state"
description = "State"
version = "3.0.0"
authors = [{ name = "Björn Petersen", email = "pypi@bjoernpetersen.net" }]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "opentelemetry-api >=1.22, <2",
    "pydantic >=2.11,<3",
]

[project.urls]
changelog = "https://github.com/BlindfoldedSurgery/bs-config/blob/main/CHANGELOG.md"
homepage = "https://github.com/BlindfoldedSurgery/bs-state"
source = "https://github.com/BlindfoldedSurgery/bs-state"

[project.optional-dependencies]
file = [
    "aiofiles==25.1.0",
]
kubernetes = [
    "kubernetes_asyncio >=33, <34",
]
redis = [
    "opentelemetry-instrumentation-redis",
    "redis[hiredis] >=6, <8",
]

[dependency-groups]
dev = [
    "bs-config [dotenv] ==3.4.0",
    "commitizen ==4.9.1",
    "coverage [toml] >=7, <8",
    "mypy ==1.18.*",
    "pre-commit >=4, <5",
    "pytest >=8, <9",
    "pytest-asyncio ==1.2.*",
    "pytest-cov >=7, <8",
    "ruff ==0.14.3",
    "types-aiofiles==25.1.0.*",
    "uvloop ==0.22.*",
]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }

[tool.uv.build-backend]
source-include = [
    "CHANGELOG.md"
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "aiofile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "kubernetes",
    "redis",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
